Bug 368852 - Calligra Sheets crashed when "cut" a column
Summary: Calligra Sheets crashed when "cut" a column
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.11
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords: drkonqi
: 377775 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-15 15:02 UTC by Luca Weiss
Modified: 2022-05-21 12:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.51 KB, text/plain)
2017-02-09 16:21 UTC, Alan Liddell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Weiss 2016-09-15 15:02:20 UTC
Application: calligrasheets (2.9.11)
KDE Platform Version: 4.14.24
Qt Version: 4.8.7
Operating System: Linux 4.7.2-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:

Added a new column, Ctrl X'ed a whole column and the application crashed.

-- Backtrace:
Application: Calligra Sheets (calligrasheets), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[KCrash Handler]
#6  0x0000000000000021 in ?? ()
#7  0x00007f7e0e389b67 in Calligra::Sheets::StyleStorage::invalidateCache(QRect const&) () from /usr/lib/libcalligrasheetsodf.so.14
#8  0x00007f7e0e38b590 in Calligra::Sheets::StyleStorage::regionChanged(QRect const&) () from /usr/lib/libcalligrasheetsodf.so.14
#9  0x00007f7e0e38e89e in Calligra::Sheets::StyleStorage::insert(Calligra::Sheets::Region const&, Calligra::Sheets::Style const&) () from /usr/lib/libcalligrasheetsodf.so.14
#10 0x00007f7e0e278e2e in Calligra::Sheets::CellStorage::setStyle(Calligra::Sheets::Region const&, Calligra::Sheets::Style const&) () from /usr/lib/libcalligrasheetsodf.so.14
#11 0x00007f7e0e73daa1 in Calligra::Sheets::DeleteCommand::process(Calligra::Sheets::Region::Element*) () from /usr/lib/libcalligrasheetscommon.so.14
#12 0x00007f7e0e72e481 in Calligra::Sheets::AbstractRegionCommand::mainProcessing() () from /usr/lib/libcalligrasheetscommon.so.14
#13 0x00007f7e0e73dfa9 in Calligra::Sheets::DeleteCommand::mainProcessing() () from /usr/lib/libcalligrasheetscommon.so.14
#14 0x00007f7e0e72e5aa in Calligra::Sheets::AbstractRegionCommand::redo() () from /usr/lib/libcalligrasheetscommon.so.14
#15 0x00007f7e26f2ca07 in KUndo2Command::redoMergedCommands() () from /usr/lib/libkundo2.so.14
#16 0x00007f7e26f2d108 in KUndo2QStack::push(KUndo2Command*) () from /usr/lib/libkundo2.so.14
#17 0x00007f7e2a964f08 in ?? () from /usr/lib/libkomain.so.14
#18 0x00007f7e29371590 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#19 0x00007f7e0e31fe32 in Calligra::Sheets::Map::commandAdded(KUndo2Command*) () from /usr/lib/libcalligrasheetsodf.so.14
#20 0x00007f7e0e72ec75 in Calligra::Sheets::AbstractRegionCommand::execute(KoCanvasBase*) () from /usr/lib/libcalligrasheetscommon.so.14
#21 0x00007f7e0e816d54 in Calligra::Sheets::CellToolBase::cut() () from /usr/lib/libcalligrasheetscommon.so.14
#22 0x00007f7e0e726f3d in ?? () from /usr/lib/libcalligrasheetscommon.so.14
#23 0x00007f7e29371590 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#24 0x00007f7e29db6342 in QAction::triggered(bool) () from /usr/lib/libQtGui.so.4
#25 0x00007f7e29db76a3 in QAction::activate(QAction::ActionEvent) () from /usr/lib/libQtGui.so.4
#26 0x00007f7e29db7bfc in QAction::event(QEvent*) () from /usr/lib/libQtGui.so.4
#27 0x00007f7e269eaa52 in KAction::event(QEvent*) () from /usr/lib/libkdeui.so.5
#28 0x00007f7e29dbc2dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#29 0x00007f7e29dc3136 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#30 0x00007f7e2a94eeb5 in KoApplication::notify(QObject*, QEvent*) () from /usr/lib/libkomain.so.14
#31 0x00007f7e2935d4dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#32 0x00007f7e29df3138 in ?? () from /usr/lib/libQtGui.so.4
#33 0x00007f7e29df3327 in ?? () from /usr/lib/libQtGui.so.4
#34 0x00007f7e29dc450e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#35 0x00007f7e2a94eeb5 in KoApplication::notify(QObject*, QEvent*) () from /usr/lib/libkomain.so.14
#36 0x00007f7e2935d4dd in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#37 0x00007f7e29e623d3 in ?? () from /usr/lib/libQtGui.so.4
#38 0x00007f7e29e628e2 in ?? () from /usr/lib/libQtGui.so.4
#39 0x00007f7e29e3c5f6 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#40 0x00007f7e29e65262 in ?? () from /usr/lib/libQtGui.so.4
#41 0x00007f7e25f02e67 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#42 0x00007f7e25f030d0 in ?? () from /usr/lib/libglib-2.0.so.0
#43 0x00007f7e25f0317c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#44 0x00007f7e2938d83e in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#45 0x00007f7e29e65336 in ?? () from /usr/lib/libQtGui.so.4
#46 0x00007f7e2935bd51 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#47 0x00007f7e2935c0c5 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#48 0x00007f7e29361a69 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#49 0x00007f7e2afa14e5 in kdemain () from /usr/lib/libkdeinit4_calligrasheets.so
#50 0x00007f7e2ac21291 in __libc_start_main () from /usr/lib/libc.so.6
#51 0x0000000000400769 in _start ()

Reported using DrKonqi
Comment 1 Dag Andersen 2016-11-21 09:01:04 UTC
Cannot reproduce this on:
KDE Neon 5.8.3 calligrasheets 3.0 Alpha
Comment 2 Alan Liddell 2017-02-09 16:21:22 UTC
Created attachment 103925 [details]
New crash information added by DrKonqi

calligrasheets (2.9.11) on KDE Platform 4.14.26 using Qt 4.8.7

- What I was doing when the application crashed:

I cut and attempted to paste an entire row (as opposed to a subset of cells in that row) into another row.

-- Backtrace (Reduced):
#7  0x00007f2e42d79f67 in Calligra::Sheets::StyleStorage::invalidateCache(QRect const&) () from /lib64/libcalligrasheetsodf.so.14
#8  0x00007f2e42d7b97f in Calligra::Sheets::StyleStorage::regionChanged(QRect const&) () from /lib64/libcalligrasheetsodf.so.14
#9  0x00007f2e42d7eb9e in Calligra::Sheets::StyleStorage::insert(Calligra::Sheets::Region const&, Calligra::Sheets::Style const&) () from /lib64/libcalligrasheetsodf.so.14
#10 0x00007f2e42c6964e in Calligra::Sheets::CellStorage::setStyle(Calligra::Sheets::Region const&, Calligra::Sheets::Style const&) () from /lib64/libcalligrasheetsodf.so.14
#11 0x00007f2e430dbda1 in Calligra::Sheets::DeleteCommand::process(Calligra::Sheets::Region::Element*) () from /lib64/libcalligrasheetscommon.so.14
Comment 3 Christoph Feck 2019-09-17 00:30:56 UTC
*** Bug 377775 has been marked as a duplicate of this bug. ***
Comment 4 Tomas Mecir 2022-05-21 12:53:24 UTC
Git commit a43a05877689f7cdb7a3f1b36e05626027869d72 by Tomas Mecir.
Committed on 21/05/2022 at 12:52.
Pushed by mecir into branch 'master'.

Disable the style cache, it's causing more problems than it's worth.
Related: bug 391018, bug 448587, bug 449729

M  +41   -41   sheets/core/StyleStorage.cpp

https://invent.kde.org/office/calligra/commit/a43a05877689f7cdb7a3f1b36e05626027869d72