Disable the style cache, it's causing more problems than it's worth.

BUG: 368852
BUG: 391018
BUG: 448587
BUG: 449729